# glstudy

./: CMakeLists.txt  README.md  entry.cpp  glad.c  glstudy.vcxproj  glstudy.vcxproj.filters  ioshader.cpp  ioshader.h  main.cpp  maininc.h
include/: glad.h  ioshader.h  maininc.h
shaders/: fragmentShader.fshr  vertexShader.vshr
src/: glad.c  ioshader.cpp  main.cpp
